--- a/releases/staticfile-buildpack/index.yml
+++ b/releases/staticfile-buildpack/index.yml
@@ -63,6 +63,8 @@ builds:
     version: 1.5.19
   5e851608-44bd-42dd-56cf-b66bd43a0b4a:
     version: 1.6.9
+  5f81c7d6-e4ca-4351-582e-175fcee946ff:
+    version: 1.6.28
   6786f0f8-3a7f-4c13-7356-e980e1399142:
     version: 1.5.31
   68070758-a0e4-48f6-68ca-940407cba82c:
