--- a/releases/staticfile-buildpack/index.yml
+++ b/releases/staticfile-buildpack/index.yml
@@ -15,6 +15,8 @@ builds:
     version: 1.4.4
   0ba77f8d-2a51-4e40-4e10-96bc73ceb0a9:
     version: 1.5.0
+  134e8c72-5c7a-4262-68bb-6c28cd197255:
+    version: 1.6.29
   188f9e88-e2e0-4f74-7d2e-ef154283fcdc:
     version: 1.4.42
   1c1cc8b0-e684-462d-800a-0e2fc499d83b:
